# third_party_selinux

./: BUILD.gn  OAT.xml  README.OpenSource  README.md  bundle.json  check_md5.sh  exec_check_md5.sh  libsepol.map
checkpolicy/: .gitignore  policy_scan.c  y.tab.c  y.tab.h
demo/: README.txt  build_policy.sh  file_contexts  policy.31  precompiled_sepolicy  push.bat  push_toybox.bat  sepolicy.default.3516.conf  test.cil
depends/fts/: fts.c  fts.h  recallocarray.c
depends/pcre/include/: pcre2.h
depends/pcre/include_internal/: config.h
libselinux/include/selinux/: restorecon.h  selinux.h  skip_elx_constants.h
libselinux/src/: app_allow_config.c  app_allow_config.h  avc.c  checkAccess.c  file_path_suffixes.h  get_default_type.c  ignore_path.c  ignore_path.h  is_customizable_type.c  label.c  label_file.c  label_internal.h  matchmediacon.c  procattr.c  query_user_context.c  selinux_config.c  selinux_internal.h  selinux_restorecon.c
libsemanage/src/: conf-scan.c  y.tab.c  y.tab.h
libsepol/cil/src/: cil_build_ast.c  cil_lexer.c  cil_reset_ast.c  cil_resolve_ast.c
libsepol/src/: expand.c  kernel_to_cil.c  link.c
policycoreutils/: load_policy.c  policycoreutils.h  restorecon.c
policycoreutils/include/: policycoreutils.h
policycoreutils/src/: load_policy.c  restorecon.c
secilc/: secilc.c
secilc/docs/: cil_conditional_statements.md
tools/load_policy/: load_policy.c
tools/restorecon/: restorecon.c
